--- a/platformio.ini
+++ b/platformio.ini
@@ -134,18 +134,18 @@ monitor_filters =
 	esp32_exception_decoder
 
 lib_deps = 
-    mikalhart/TinyGPSPlus @ ^1.0.3
-    adafruit/Adafruit NeoPixel @ ^1.11.0
-    bxparks/AceButton @ ^1.10.1
+    mikalhart/TinyGPSPlus @ 1.0.3
+    adafruit/Adafruit NeoPixel @ 1.11.0
+    bxparks/AceButton @ 1.10.1
     ; lvgl/lvgl @ ~8.3.9
     https://github.com/lvgl/lvgl.git#release/v8.3
-    lewisxhe/XPowersLib @ ^0.2.1
-    lewisxhe/SensorLib @ ^0.1.4
-    bodmer/TFT_eSPI @ ^2.5.31
+    lewisxhe/XPowersLib @ 0.2.1
+    lewisxhe/SensorLib @ 0.1.4
+    bodmer/TFT_eSPI @ 2.5.31
     FS
     SPIFFS
     SD
-    sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library @ ^1.1.2
+    sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library @ 1.1.2
   
 [env:T-Display-AMOLED]
 extends = env
